--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "start": "ember serve --port=${PORT}",
     "build": "ember build",
     "test": "ember test",
-    "postinstall": "bower install"
   },
   "repository": "",
   "engines": {
@@ -20,10 +19,6 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "ember-cli": "2.4.2"
-  },
-  "dependencies": {
-    "bower": "1.3.12",
     "broccoli-asset-rev": "^2.2.0",
     "ember-ajax": "0.7.1",
     "ember-bootstrap-datetimepicker": "1.0.4",
@@ -48,7 +43,9 @@
     "ember-resolver": "^2.0.3",
     "ember-time-input": "0.0.6",
     "eonasdan-bootstrap-datetimepicker": "4.15.35",
-    "loader.js": "^4.0.0",
+    "loader.js": "^4.0.0"
+  },
+  "dependencies": {
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.1",
     "crypto-js": "^3.1.6",
