--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "ember serve --port=${PORT}",
     "build": "ember build",
-    "test": "ember test",
+    "test": "ember test"
   },
   "repository": "",
   "engines": {
